# to-comment-or-not

./: .gitignore  DESCRIPTION  README.md  _quarto.yml  index.html  index.qmd  justfile  llms-full.txt  llms.txt  meta-tags.html  pyproject.toml  robots.txt  sitemap.xml  style.css
.claude/: settings.local.json
.github/workflows/: build-presentation.yaml
.well-known/: llms-full.txt  llms.txt
