[project]
name = "to-comment-or-not"
version = "1.0.0"
description = "A comprehensive guide to code commenting best practices for software development"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "CC0 1.0 Universal" }
authors = [
    { name = "Indrajeet Patil", email = "patilindrajeet.science@gmail.com" }
]
keywords = [
    "comments",
    "software-engineering",
    "computer-science",
    "software-development",
    "code-documentation"
]
dependencies = ["jupyter>=1.1.1", "ipykernel>=7.2.0", "matplotlib>=3.10.8"]

[tool.uv]
required-version = ">=0.9.15"

[dependency-groups]
dev = []
